--- a/Hit distribution Plot.ipynb
+++ b/Hit distribution Plot.ipynb
@@ -522,35 +522,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "110d48d2-a797-43ae-b8b4-4a270b5b8c46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path='/viper/ptmp1/arego/LargeTracks/0.h5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "660ab69b-b7f9-4ae0-a82a-2b4d6c6f70e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8f1ee54f-b534-4855-9830-17263db939c3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "660ab69b-b7f9-4ae0-a82a-2b4d6c6f70e3",
+   "execution_count": 15,
+   "id": "035489c9-b774-44e1-82f5-1d2bd48708c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hits=pd.read_hdf(path,key='hits')\n",
+    "records=pd.read_hdf(path,key='records')\n",
+    "record_counts = hits['record_id'].value_counts().reset_index()\n",
+    "record_counts.columns = ['record_id', 'count']  # Rename columns for clarity\n",
+    "# Assuming df contains an 'energy' column along with 'record_id'\n",
+    "merged_df = records[['record_id','energy']].merge(record_counts, on='record_id', how='inner')\n",
+    "merged_df[['energy','count']].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fe9ec02f-3ed1-4480-940e-9c331eef3874",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Casca'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final Merged Shape: (499, 2)\n"
+     ]
     }
    ],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "b5fe1765-f378-412c-9bfb-4b7e561e57b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final Merged Shape: (2000, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import multiprocessing\n",
+    "\n",
+    "def process_file(file_path):\n",
+    "    \"\"\"Processes a single HDF5 file using HDFStore and returns an array of (energy, count) pairs.\"\"\"\n",
+    "    try:\n",
+    "        with pd.HDFStore(file_path, mode='r') as store:\n",
+    "            hits = store[\"hits\"]\n",
+    "            records = store[\"records\"]\n",
+    "\n",
+    "            record_counts = hits[\"record_id\"].value_counts().reset_index()\n",
+    "            record_counts.columns = [\"record_id\", \"count\"]\n",
+    "\n",
+    "            merged_df = records[[\"record_id\", \"energy\"]].merge(record_counts, on=\"record_id\", how=\"inner\")\n",
+    "\n",
+    "            return merged_df[[\"energy\", \"count\"]].to_numpy()\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing {file_path}: {e}\")\n",
+    "        return np.empty((0, 2))  # Return empty array on failure\n",
+    "\n",
+    "def process_directory(directory, num_workers=8):\n",
+    "    \"\"\"Processes all .h5 files in a directory using multiprocessing and returns a merged numpy array.\"\"\"\n",
+    "    h5_files = [os.path.join(directory, f) for f in os.listdir(directory) if f.endswith(\".h5\")]\n",
+    "    h5_files=h5_files[:100]\n",
+    "    with multiprocessing.Pool(processes=min(num_workers, len(h5_files))) as pool:\n",
+    "        results = pool.map(process_file, h5_files)\n",
+    "\n",
+    "    return np.vstack(results) if results else np.empty((0, 2))\n",
+    "\n",
+    "# Example usage\n",
+    "directory = \"/viper/ptmp1/arego/LargeTracks/\"\n",
+    "merged_array = process_directory(directory, num_workers=8)\n",
+    "\n",
+    "print(\"Final Merged Shape:\", merged_array.shape)  # Should be (N, 2), where N is the total rows across files\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d4cbc7a3-b757-482b-af32-aedd752ce5c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8f1ee54f-b534-4855-9830-17263db939c3",
+   "id": "b356ac78-6878-46fe-b01e-fe37319489af",
    "metadata": {},
    "outputs": [],
    "source": []
